
2020-04-03  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c, tree.h: new field attribute flag_internal_register
	* config.def, field.c, typeck.c: experimental numeric-pointer option
	  (cb_numeric_pointer) to handle ACU's special POINTER handling

2020-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* warning.def, cobc.h, cobc.c, error.c, field.c, typeck.c, parser.y:
	  new warning option -Wextra, replacing previous warningopt, allowing to
	  disable them or have them as error and fixing the previous behaviour
	  where -W effectively set them to be handled as error
	* parser.y: removed some duplicate warnings and always raise PENDING,
	  not only in case of -W/-Wall
	* tree.h, tree.c, error.c (cb_warning_dialect_x): new function,
	  possibly to be replaced later
	* reerved.c: added COBOL 202x FUNCTION CONCAT
	* tree.c (get_category_from_arguments): new function;
	  added missing implementation of "type of function depends on arguments"
	  and "check that arguments are of a matching type"
	* tree.c, parser.y: changed "FUNCTION parameter" to "FUNCTION argument"
	* typeck.c: FR #222 numeric checks for CRT STATUS (may be >= 4 digits)

2020-03-31  Simon Sobisch <simonsobisch@gnu.org>

	* field.c.y (cb_validate_78_item): full validation and resolving
	  of level 78 value, even when not supported
	* typeck.c (cb_validate_program_data): skip lvl 66 entries in odo-check
	* parser.y, field.c: moved function (error_if_invalid_level_for_renames)
	  to field.c
	* field.c (cb_validate_renames_item): reordered checks
	* field.c (cb_validate_renames_item), tree.h: cb_validate_program_data
	* typeck.c (cb_build_length): workaround for bug #623 RENAMES with length 0
	* parser.y (renames_entry): extended syntax checks for RENAMES
	* parser.y (special_names_clause), config.def (cb_special_names_clause):
	  FR #222 implemented SPECIAL-NAMES clause (variable-local definition)

2020-03-27  Edward Hart <edward.dan.hart@gmail.com>
